--- a/faleconosco.html
+++ b/faleconosco.html
@@ -28,6 +28,7 @@
         <p>Tamanho: <input type="number" name="" id=""> </p>
         
         <section>B <br> E <br> L <br> E <br> Z <br> A <br> <br> P <br> U <br> R <br> A</section>
+        <p id="botao"><a href="kuxonga.html">VOLTAR</a></p>
     </main>
     <footer>
 <p>Criado por Serviços Nova Graça 2021</p>
