--- a/kuxonga.html
+++ b/kuxonga.html
@@ -22,6 +22,7 @@
         <h2>PODEROSA FELIZ <br> E RADIANTE</h2>
         <img src="imagens/lavarcabelo.jpg" alt="">
         <section>B <br> E <br> L <br> E <br> Z <br> A <br> <br> P <br> U <br> R <br> A</section>
+        <p id="botao"><a href="index.html">VOLTAR</a></p>
     </main>
     <footer>
 <p>Criado por Serviços Nova Graça 2021</p>
