--- a/salao.html
+++ b/salao.html
@@ -26,6 +26,7 @@
         <h2>CORTE & DREADS</h2>
        
         <section>B <br> E <br> L <br> E <br> Z <br> A <br> <br> P <br> U <br> R <br> A</section>
+        <p id="botao"><a href="kuxonga.html">VOLTAR</a></p>
     </main>
     <footer>
 <p>Criado por Serviços Nova Graça 2021</p>
