--- a/kuxonga.html
+++ b/kuxonga.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h3>SALÃO & BOUTIQUE</h3>
-        <h1>KUXONGA</h1>
+        <h1>CHI MOR</h1>
         <nav id="menu">
             <a href="boutique.html">BOUTIQUE</a>
             <a href="salao.html">SALÃO</a>
