--- a/salao.html
+++ b/salao.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h3>SALÃO & BOUTIQUE</h3>
-        <h1>KUXONGA</h1>
+        <h1>CHI MOR</h1>
         <nav id="menu">
             <a href="boutique.html">BOUTIQUE</a>
             <a href="salao.html">SALÃO</a>
