--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
     <h3>----------BEM VINDO----------</h3>
     <h2>SALÃO & BOUTIQUE</h2>
-    <h1>KUXONGA</h1>
+    <h1>Chi mor</h1>
     <a href="kuxonga.html">ENTRAR</a>
     
     <footer>
